--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,124 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
+
+@font-face {
+  font-family: "Calibri-Bold";
+  font-display: swap;
+  font-weight: 700;
+  font-style: normal;
+  src: local("Calibri Bold"), url("/calibri-bold.ttf") format("truetype");
+}
+
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --white: #ffffff;
+  --black: #202020;
+  --gray: #636465;
+  --blue: #00aeef;
+  --text-color: #000000;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 1rem;
+  line-height: 100%;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  background-color: var(--white);
+}
+
+body {
+  font-size: calc(0.20181634712411706vw + 0.625em);
+  background: #f5f5f7;
+}
+
+.container {
+  padding: 0 1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  /* font-family: "Inter"; */
+  line-height: 120%;
+  color: var(--text-color);
+}
+
+h1 {
+  font-family: "Calibri-Bold";
+}
+
+h1,
+h2 {
+  text-transform: uppercase;
+}
+
+h3,
+h4 {
+  font-weight: 400;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 4.46em;
+  letter-spacing: 0.01em;
+  line-height: 100%;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 3.33em;
+}
+h3 {
+  font-size: 2.78em;
+  line-height: 140%;
+}
+
+h4 {
+  font-size: 2.22em;
+  line-height: 140%;
+}
+
+.body-text,
+.body-text-bold {
+  font-size: 16px;
+  line-height: 140%;
+  color: var(--text-color);
+}
+
+.body-text {
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  margin: 0;
+}
+
+.body-text-bold {
+  font-weight: 600;
+  letter-spacing: 0.03em;
+}
+
+.small-text,
+.small-text-bold {
+  font-size: 14px;
+  line-height: 120%;
+}
+
+.small-text {
+  font-weight: 400;
+  color: var(--gray);
+}
+
+.small-text-bold {
+  font-weight: 700;
+  color: var(--text-color);
 }
 
 a {
@@ -11,16 +126,25 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+p {
+  margin: 0px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media screen and (min-width: 992px) {
+  .body {
+    min-height: 0vw;
+    font-size: calc(0.6122848200312989vw + 0.3092723004694837em);
   }
+
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 6.66em;
+  }
+}
+
+@media screen and (min-width: 1560px) {
   body {
-    color: white;
-    background: black;
+    font-size: 0.90625em;
   }
 }
