--- a/components/layout/footer/Footer.module.css
+++ b/components/layout/footer/Footer.module.css
@@ -2,7 +2,6 @@
   background-color: var(--black);
   padding: 24px 0;
   margin-top: 80px;
-  border-top-left-radius: 48px;
   overflow: hidden;
 }
 
@@ -17,7 +16,7 @@
 }
 
 .Footer p {
-  font-size: 16px;
+  font-size: 12px;
   line-height: 120%;
   text-transform: uppercase;
   color: #f5f5f7;
@@ -34,4 +33,30 @@
   height: 428px;
   width: 476px;
   z-index: 1;
+}
+
+.Footer > div a {
+  text-decoration: underline;
+  color: #f5f5f7;
+  position: relative;
+  right: 0px;
+}
+
+@media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 992px) {
+  .Footer p {
+    line-height: 120%;
+  }
+
+  .Footer > div a {
+    position: absolute;
+    right: 6.66em;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+@media only screen and (min-width: 1280px) {
 }
