--- a/components/layout/header/Header.module.css
+++ b/components/layout/header/Header.module.css
@@ -2,6 +2,22 @@
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 100;
+  background: #f5f5f7;
+}
+
+.Nav {
+  display: none;
+}
+
+.NavWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .Header,
@@ -18,33 +34,45 @@
   gap: 1.5rem;
 }
 
-.NavList a,
-.ContactWrapper p {
+.NavList a {
   font-weight: 400;
   font-size: 16px;
   line-height: 120%;
   text-transform: uppercase;
   color: #202020;
+  transition: 0.3s all;
 }
 
-.ContactWrapper p {
-  margin-right: 24px;
+.NavList a:hover {
+  color: var(--blue);
 }
 
-.ContactWrapper {
-  display: flex;
-  align-items: center;
+.Header > div:last-of-type > div {
+  background: var(--blue) !important;
 }
 
-.MediaLink {
-  border: 1px solid #636465;
-  border-radius: 12px;
-  padding: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@media only screen and (min-width: 768px) {
 }
 
-.MediaLink {
-  margin-right: 16px;
+@media only screen and (min-width: 992px) {
+  .Nav {
+    display: block;
+  }
+
+  .Header > div:last-of-type {
+    display: none;
+  }
 }
+
+@media only screen and (min-width: 1280px) {
+}
+
+/* @media only screen and (max-width: 768px) {
+}
+
+@media only screen and (max-width: 992px) {
+
+
+@media only screen and (max-width: 1280px) {
+
+} */
