--- a/components/layout/sections/redemption/Redemption.module.css
+++ b/components/layout/sections/redemption/Redemption.module.css
@@ -1,5 +1,6 @@
 .Redemption {
-  position: relativee;
+  position: relative;
+  margin-bottom: 64px;
 }
 
 .TextContentWrapper {
@@ -8,16 +9,15 @@
 }
 
 .TextContentWrapper p {
-  max-width: 510px;
   color: var(--gray);
 }
 
 .TextContentWrapper span {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 140%;
   letter-spacing: 0.03em;
-  margin-top: 8px;
+  margin-top: 16px;
   color: var(--gray);
   display: block;
 }
@@ -29,29 +29,20 @@
 .CardsWrapper {
   padding: 40px 0 16px;
   display: flex;
+  flex-direction: column;
   gap: 17px;
 }
 
 .Card {
   padding: 24px;
-  height: 208px;
+  height: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 20%;
+  width: 100%;
   background: #fffeff;
   border: 1px solid rgba(31, 32, 35, 0.3);
   border-radius: 24px 0px 24px 24px;
   position: relative;
-}
-
-.CardImageWrapper span {
-  font-size: 14px;
-  line-height: 120%;
-  color: var(--gray);
-  position: absolute;
-  top: 24px;
-  right: 24px;
 }
 
 .CardTextWrapper span {
@@ -59,7 +50,11 @@
   line-height: 120%;
   text-transform: uppercase;
   color: var(--black);
+  font-weight: 500;
+  display: block;
+  margin-top: 16px;
 }
+
 .CardTextWrapper p {
   font-size: 14px;
   line-height: 120%;
@@ -69,12 +64,46 @@
 }
 
 .BottomText {
-  text-align: right;
-  font-size: 16px;
+  text-align: center;
+  font-size: 12px;
   line-height: 120%;
   text-transform: uppercase;
+  padding-top: 8px;
 }
 
 .BottomText span {
   color: var(--blue);
+}
+
+.Redemption > span {
+  position: absolute;
+  z-index: -2;
+  top: -100px;
+  left: 0;
+}
+
+@media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 992px) {
+  .Redemption {
+    margin-bottom: 0px;
+  }
+
+  .CardsWrapper {
+    flex-direction: row;
+  }
+
+  .Card {
+    width: 20%;
+    height: 208px;
+  }
+
+  .BottomText {
+    font-size: 16px;
+    text-align: right;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
 }
