--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,10 @@
   --text-color: #000000;
 }
 
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
 html,
 body {
   padding: 0;
@@ -52,7 +56,8 @@ h6 {
   color: var(--text-color);
 }
 
-h1 {
+h1,
+h3 {
   font-family: "Calibri-Bold";
 }
 
@@ -80,6 +85,8 @@ h2 {
 h3 {
   font-size: 2.78em;
   line-height: 140%;
+  color: var(--blue);
+  text-transform: uppercase;
 }
 
 h4 {
