--- a/components/layout/sections/about/About.module.css
+++ b/components/layout/sections/about/About.module.css
@@ -3,6 +3,7 @@
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .About h3 {
@@ -40,7 +41,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   height: 877px;
-  width: 1268px;
+  width: 100%;
   z-index: 0;
   opacity: 0.7;
 }
@@ -73,6 +74,10 @@
 
   .VideoWrapper iframe {
     margin-top: 64px;
+  }
+
+  .AboutFrame {
+    width: 1268px;
   }
 }
 
