--- a/components/layout/sections/sales/Sales.module.css
+++ b/components/layout/sections/sales/Sales.module.css
@@ -25,6 +25,7 @@
   display: flex;
   gap: 16px;
   flex-direction: column;
+  width: 100%;
 }
 
 .Sales > span {
@@ -32,6 +33,12 @@
   z-index: -1;
   top: -90px;
   left: 0;
+}
+
+.ImagesWrapper {
+  width: 100;
+  display: flex;
+  flex-direction: column;
 }
 
 @media only screen and (min-width: 768px) {
@@ -60,6 +67,12 @@
   .Sales {
     align-items: center;
     padding: 0px 6.66em 127px;
+  }
+
+  .ImagesWrapper {
+    width: 100;
+    display: flex;
+    flex-direction: row;
   }
 }
 
