--- a/components/layout/sections/about/About.module.css
+++ b/components/layout/sections/about/About.module.css
@@ -36,7 +36,7 @@
   background-image: url("/about-frame.png");
   position: absolute;
   right: -15%;
-  bottom: -30%;
+  bottom: -27%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -66,6 +66,7 @@
 @media only screen and (min-width: 992px) {
   .About {
     padding: 64px 6.66em 120px;
+    overflow: visible;
   }
 
   .TextWrapper {
@@ -78,6 +79,9 @@
 
   .AboutFrame {
     width: 1268px;
+    object-fit: cover;
+    right: -15%;
+    bottom: -30%;
   }
 }
 
