--- a/components/layout/sections/contact/Contact.module.css
+++ b/components/layout/sections/contact/Contact.module.css
@@ -79,7 +79,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 877px;
+  height: 100vh;
   width: 100%;
   z-index: 0;
   opacity: 0.7;
@@ -107,14 +107,16 @@
   }
 
   .ContactFrame {
-    left: -5%;
-    bottom: 10%;
+    left: 30%;
+    bottom: -8%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 0;
     opacity: 0.7;
-    transform: rotate(90deg);
+    transform: rotate(135deg);
+    height: 80vh;
+    width: 50vh;
   }
 }
 
