--- a/components/layout/header/Header.module.css
+++ b/components/layout/header/Header.module.css
@@ -1,6 +1,6 @@
 .Header {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   justify-content: space-between;
   position: fixed;
   width: 100%;
@@ -18,6 +18,8 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  z-index: 2;
 }
 
 .Header,
@@ -49,6 +51,7 @@
 
 .Header > div:last-of-type > div {
   background: var(--blue) !important;
+  z-index: 4;
 }
 
 @media only screen and (min-width: 768px) {
@@ -61,6 +64,11 @@
 
   .Header > div:last-of-type {
     display: none;
+  }
+
+  .Header {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 }
 
