--- a/components/layout/sections/about/About.module.css
+++ b/components/layout/sections/about/About.module.css
@@ -35,8 +35,8 @@
 .AboutFrame {
   background-image: url("/about-frame.png");
   position: absolute;
-  right: -15%;
-  bottom: -27%;
+  right: -12%;
+  bottom: -22%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -86,4 +86,27 @@
 }
 
 @media only screen and (min-width: 1280px) {
+  .AboutFrame {
+    width: 1268px;
+    object-fit: cover;
+    right: 0%;
+    bottom: -30%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .AboutFrame {
+    width: 768px;
+
+    right: 80px;
+    bottom: -30%;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  .AboutFrame {
+    width: 1268px;
+    right: -10%;
+    bottom: -30%;
+  }
 }
