--- a/components/layout/sections/contact/Contact.module.css
+++ b/components/layout/sections/contact/Contact.module.css
@@ -89,16 +89,22 @@
 .ContactWrapper > span {
   position: absolute;
   z-index: -1;
-  top: -50px;
+  top: -80px;
   left: 0;
 }
 
 @media only screen and (min-width: 768px) {
+  .Map iframe {
+    width: 100%;
+  }
+
+  .Details {
+    flex-direction: row;
+  }
 }
 
 @media only screen and (min-width: 992px) {
-  .Contact,
-  .Details {
+  .Contact {
     flex-direction: row;
   }
 
@@ -118,7 +124,20 @@
     height: 80vh;
     width: 50vh;
   }
+
+  .ContactWrapper > span {
+    top: -50px;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
+  .Map iframe {
+    width: 516px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .Map iframe {
+    width: 616px;
+  }
 }
