--- a/components/layout/sections/hero/Hero.module.css
+++ b/components/layout/sections/hero/Hero.module.css
@@ -7,6 +7,7 @@
   width: 100%;
   position: relative;
   padding-top: 96px;
+  overflow: hidden;
 }
 
 .HeroBottomWrapper,
@@ -117,31 +118,50 @@
 .HeroFrame {
   background-image: url("/hero-frame.png");
   position: absolute;
-  right: 0;
-  bottom: -25%;
+  right: -88%;
+  bottom: -1%;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  height: 877px;
-  width: 1268px;
+  background-size: contain;
+  height: 451px;
+  width: 691px;
   z-index: 0;
   opacity: 0.7;
+  transform: rotate(180deg);
 }
 
 @media only screen and (min-width: 768px) {
+  .HeroImageTop,
+  .HeroBottomImagesWrapper > div:nth-of-type(1) {
+    max-width: 511px;
+  }
+
+  .HeroBottomImagesWrapper {
+    gap: 16px;
+    margin-left: auto;
+  }
+
+  .HeroTopWrapper {
+    margin-bottom: 16px;
+  }
+
+  .HeroTextWrapper {
+    margin-bottom: 0px;
+  }
 }
 
 @media only screen and (min-width: 992px) {
-  .Hero {
-    padding-left: 6.66em;
+  .HeroTopWrapper {
+    flex-direction: row;
   }
 
   .HeroTopWrapper {
     flex-direction: row;
   }
 
-  .HeroTextWrapper {
-    margin-bottom: 0px;
+  .Hero {
+    padding-left: 6.66em;
+    overflow: visible;
   }
 
   .HeroTextWrapper a {
@@ -150,19 +170,17 @@
 
   .HeroBottomWrapper a {
     display: block;
+    cursor: pointer;
+    z-index: 3;
   }
 
-  .HeroBottomImagesWrapper {
-    gap: 16px;
-  }
-
-  .HeroTopWrapper {
-    margin-bottom: 16px;
-  }
-
-  .HeroImageTop,
-  .HeroBottomImagesWrapper > div:nth-of-type(1) {
-    max-width: 511px;
+  .HeroFrame {
+    right: 0;
+    bottom: -25%;
+    background-size: cover;
+    height: 877px;
+    width: 1268px;
+    transform: rotate(0deg);
   }
 }
 
