--- a/components/layout/sections/informations/Informations.module.css
+++ b/components/layout/sections/informations/Informations.module.css
@@ -73,18 +73,12 @@
 
 .BubbleMobile {
   display: block;
-  background-image: url("/speach-bubble-mobile.png");
-  background-position: center;
   width: 100%;
   height: 528px;
-  background-repeat: no-repeat;
-  background-size: cover;
+  position: relative;
 }
 
 @media only screen and (min-width: 768px) {
-}
-
-@media only screen and (min-width: 992px) {
   .InformationsWrapper {
     padding-top: 127px;
   }
@@ -92,6 +86,16 @@
   .Frame,
   .BubbleImage {
     display: block;
+  }
+
+  .BubbleImage {
+    right: 40px;
+    top: 0px;
+  }
+
+  .BubbleImage img {
+    width: 220px;
+    height: 200px;
   }
 
   .Informations {
@@ -109,4 +113,13 @@
 }
 
 @media only screen and (min-width: 1280px) {
+  .BubbleImage img {
+    width: 306px;
+    height: 262px;
+  }
+
+  .BubbleImage {
+    right: 160px;
+    top: 47px;
+  }
 }
