--- a/components/layout/sections/redemption/Redemption.module.css
+++ b/components/layout/sections/redemption/Redemption.module.css
@@ -83,6 +83,9 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .Card {
+    max-width: 50%;
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -97,6 +100,7 @@
   .Card {
     width: 20%;
     height: 208px;
+    max-width: auto;
   }
 
   .BottomText {
