--- a/styles/globals.css
+++ b/styles/globals.css
@@ -137,6 +137,10 @@ p {
   margin: 0px;
 }
 
+.hamburger-react {
+  z-index: 5;
+}
+
 @media screen and (min-width: 992px) {
   .body {
     min-height: 0vw;
