--- a/components/layout/sections/hero/Hero.module.css
+++ b/components/layout/sections/hero/Hero.module.css
@@ -19,6 +19,10 @@
   z-index: 1;
 }
 
+.HeroBottomWrapper {
+  margin-left: auto;
+}
+
 .HeroBottomWrapper a {
   transform: translateY(-20px);
   display: none;
