--- a/components/layout/sections/informations/Informations.module.css
+++ b/components/layout/sections/informations/Informations.module.css
@@ -72,10 +72,21 @@
 }
 
 .BubbleMobile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+  height: 264px;
+}
+
+.BubbleMobile img {
+  margin: 0 auto;
   display: block;
   width: 100%;
-  height: 528px;
+  height: 100%;
   position: relative;
+  left: 50%;
+  transform: translate(-30%, -15%);
 }
 
 @media only screen and (min-width: 768px) {
