--- a/components/layout/sections/redemption/Redemption.module.css
+++ b/components/layout/sections/redemption/Redemption.module.css
@@ -63,12 +63,25 @@
   margin-top: 8px;
 }
 
+.CardTextWrapper p:nth-of-type(1) {
+  font-weight: 600;
+  margin-top: 16px;
+}
+
 .BottomText {
   text-align: center;
   font-size: 12px;
-  line-height: 120%;
+  line-height: 150%;
   text-transform: uppercase;
   padding-top: 8px;
+}
+
+.BottomText p:nth-of-type(1) {
+  display: none;
+}
+
+.BottomText p:nth-of-type(2) {
+  display: block;
 }
 
 .BottomText span {
@@ -99,13 +112,21 @@
 
   .Card {
     width: 20%;
-    height: 208px;
     max-width: auto;
   }
 
   .BottomText {
     font-size: 16px;
     text-align: right;
+    line-height: 120%;
+  }
+
+  .BottomText p:nth-of-type(1) {
+    display: block;
+  }
+
+  .BottomText p:nth-of-type(2) {
+    display: none;
   }
 }
 
