--- a/components/layout/sections/informations/Informations.module.css
+++ b/components/layout/sections/informations/Informations.module.css
@@ -4,7 +4,7 @@
 }
 
 .Informations {
-  background: #f5f5f7;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.925), #f5f5f7);
   box-shadow: 0px 12px 29px rgba(0, 0, 0, 0.08);
   border-radius: 24px 40px 40px 40px;
   width: 100%;
@@ -132,5 +132,9 @@
   .BubbleImage {
     right: 160px;
     top: 47px;
+  }
+
+  .Informations {
+    background: #f5f5f7;
   }
 }
