--- a/components/layout/sections/informations/Informations.module.css
+++ b/components/layout/sections/informations/Informations.module.css
@@ -4,7 +4,7 @@
 }
 
 .Informations {
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.925), #f5f5f7);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.966), #f5f5f7);
   box-shadow: 0px 12px 29px rgba(0, 0, 0, 0.08);
   border-radius: 24px 40px 40px 40px;
   width: 100%;
@@ -39,7 +39,7 @@
 }
 
 .LinksWrapper span {
-  border-left: 1px solid var(--gray);
+  /* border-left: 1px solid var(--gray); */
   padding-left: 8px;
   margin-left: 8px;
 }
@@ -112,7 +112,6 @@
     padding-top: 127px;
   }
 
-  .Frame,
   .BubbleImage {
     display: block;
   }
@@ -139,6 +138,6 @@
   }
 
   .Informations {
-    background: #f5f5f7;
+    background: #fcfcfc;
   }
 }
