--- a/components/layout/sections/contact/Contact.module.css
+++ b/components/layout/sections/contact/Contact.module.css
@@ -92,8 +92,9 @@
   height: 100vh;
   width: 100%;
   z-index: 0;
-  opacity: 0.7;
+  opacity: 1;
   transform: rotate(0deg);
+  display: none;
 }
 
 .ContactWrapper > span {
@@ -131,7 +132,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 0;
-    opacity: 0.7;
+    opacity: 1;
     transform: rotate(135deg);
     height: 80vh;
     width: 50vh;
