--- a/components/layout/sections/hero/Hero.module.css
+++ b/components/layout/sections/hero/Hero.module.css
@@ -131,8 +131,9 @@
   height: 451px;
   width: 691px;
   z-index: 0;
-  opacity: 0.7;
+  opacity: 0.8;
   transform: rotate(180deg);
+  display: none;
 }
 
 @media only screen and (min-width: 600px) {
@@ -211,5 +212,9 @@
 @media only screen and (min-width: 1280px) {
   .HeroBottomWrapper {
     margin-left: 0;
+  }
+
+  .HeroFrame {
+    bottom: -15%;
   }
 }
