--- a/components/layout/sections/contact/Contact.module.css
+++ b/components/layout/sections/contact/Contact.module.css
@@ -104,6 +104,15 @@
   left: 0;
 }
 
+.DetailWrapper span {
+  font-weight: 500;
+  color: var(--blue);
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+  opacity: 1;
+  display: block;
+}
+
 @media only screen and (min-width: 600px) {
   .Details {
     flex-direction: row;
