--- a/components/layout/sections/redemption/Redemption.module.css
+++ b/components/layout/sections/redemption/Redemption.module.css
@@ -52,7 +52,7 @@
   color: var(--black);
   font-weight: 500;
   display: block;
-  margin-top: 16px;
+  margin: 16px 0px 32px;
 }
 
 .CardTextWrapper p {
