--- a/components/layout/sections/hero/Hero.module.css
+++ b/components/layout/sections/hero/Hero.module.css
@@ -218,3 +218,9 @@
     bottom: -15%;
   }
 }
+
+@media screen and (min-width: 320px) and (max-width: 991px) and (orientation: landscape) {
+  .HeroTextWrapper a {
+    margin-bottom: 16px;
+  }
+}
