--- a/components/layout/sections/contact/Contact.module.css
+++ b/components/layout/sections/contact/Contact.module.css
@@ -156,6 +156,10 @@
   .Map iframe {
     width: 516px;
   }
+
+  .DetailsWrapper {
+    padding-top: 0px;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
